--- a/src/neki.html
+++ b/src/neki.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sauron App</title>
-</head>
-<body>
-    <main id="app"></main>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>
+        FaksLife
+    </title>
+  </head>
+  <body>
     <script type="module">
-        import init from './your_project_name.js';
-        init();
+      import init from './pkg/hello.js';
+      await init().catch(console.error);
     </script>
-</body>
+  </body>
 </html>
