--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>
-        FaksLife
-    </title>
+    <title>FaksLife</title>
   </head>
   <body>
     <script type="module">
-      import init from './pkg/hello.js';
+      import init from './pkg/FaksLife.js';
       await init().catch(console.error);
     </script>
   </body>
