--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
+
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>FaksLife</title>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+    <title>Counter</title>
+    <style type="text/css">
+        body { font-family: verdana, arial, monospace; }
+        main {
+            width:30px;
+            height: 100px;
+            margin:auto;
+            text-align: center;
+        }
+        input, .count{
+            font-size: 40px;
+            padding: 30px;
+            margin: 30px;
+        }
+    </style>
+    <script type="module">
+        import init from './pkg/FaksLife.js';
+        await init().catch(console.error);
+    </script>
   </head>
   <body>
-    <script type="module">
-      import init from './pkg/FaksLife.js';
-      await init().catch(console.error);
-    </script>
   </body>
 </html>
