muska se vedno ne dela jooooooooj

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     </style>
   </head>
   <body>
+    <audio
+  id="bg-music"
+  src="music/First-main.mp3"
+  preload="auto"
+  loop
+></audio>
   </body>
 </html>
 
